[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anaskhan", email = "anaskhanx101@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.3.3",
]

[project.scripts]
agent = "agent:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
